[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/ingame/life_dot.png" type="Texture" id=1]
[ext_resource path="res://gui/ingame/life_dot.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("dot:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 0.5, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "disappear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("dot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dot:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="life_dot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -627.0
margin_bottom = -347.0
rect_min_size = Vector2( 17, 13 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_dot" type="Sprite" parent="."]
position = Vector2( 9, 7 )
texture = ExtResource( 1 )
hframes = 2

[node name="dot" type="Sprite" parent="."]
position = Vector2( 9, 7 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="anims" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 1 )
anims/disappear = SubResource( 2 )

[node name="delay_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
